Fix home hero alignment + about page video flicker and image bleed
- Home: align top edges of showcase photos (was offset by 4rem stagger)
- About: delay video scrub setup until first frame is decoded (canplay)
- About: push second stacking image 30vh down so it stops peeking on entry

--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ nav.scrolled {
 }
 
 .showcase-item:nth-child(odd) {
-  padding-top: 4rem;
+  padding-top: 1rem;
 }
 
 .showcase-item a {
@@ -852,6 +852,7 @@ a.gallery-link:hover img {
 .about-stack-item:nth-child(2) {
   z-index: 2;
   justify-content: flex-end;
+  margin-top: 30vh;
 }
 
 .about-stack-item img {
